--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/TECHSHOP
 spring.datasource.username=root
-spring.datasource.password=ngocthinhboy2312
+spring.datasource.password=@dinhngocup1802
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
