--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/TECHSHOP
-spring.datasource.username=root
-spring.datasource.password=@dinhngocup1802
+spring.datasource.url=jdbc:mysql://remotemysql.com/D2D6fv6EUp
+spring.datasource.username=D2D6fv6EUp
+spring.datasource.password=7YEFSc1g7q
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
