--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-#spring.datasource.url=jdbc:mysql://remotemysql.com/D2D6fv6EUp
-#spring.datasource.username=D2D6fv6EUp
-#spring.datasource.password=7YEFSc1g7q
-spring.datasource.url=jdbc:mysql://localhost:3306/TECHSHOP
-spring.datasource.username=root
-spring.datasource.password=@dinhngocup1802
+spring.datasource.url=jdbc:mysql://remotemysql.com/ajfkJoYahu
+spring.datasource.username=ajfkJoYahu
+spring.datasource.password=g26rCDNbAa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/TECHSHOP
+#spring.datasource.username=root
+#spring.datasource.password=@dinhngocup1802
 
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
