--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@
 #spring.datasource.password=g26rCDNbAa
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/TECHSHOP
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop_EAV
 spring.datasource.username=root
-spring.datasource.password=@dinhngocup1802
+spring.datasource.password=ngocthinhboy2312
 
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
