--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/techshop_EAV
 spring.datasource.username=root
-spring.datasource.password=@dinhngocup1802
+spring.datasource.password=ngocthinhboy2312
 
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
